deployments/kubernetes/logtail-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: logtail
  namespace: akkeris-system
spec:
  selector:
    matchLabels:
      name: logtail
  serviceName: "logtail"
  replicas: 2
  template:
    metadata:
      labels:
        name: logtail
      annotations:
        prometheus.io/port: "9000"
        prometheus.io/scrape: "true"
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: logtail
        image: akkeris/logtrain:v0.3.1
        command:
          - ./logtail
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9002
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 64Mi
      securityContext: {}
      serviceAccount: logtrain
      serviceAccountName: logtrain
