deployments/kubernetes/logtail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logtail-0
  labels:
    name: logtail-0
  namespace: akkeris-system
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 9000
  - port: 9002
    name: syslogtcp
    protocol: TCP
    targetPort: 9002
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: logtail-0
---
apiVersion: v1
kind: Service
metadata:
  name: logtail-1
  labels:
    name: logtail-1
  namespace: akkeris-system
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 9000
  - port: 9002
    name: syslogtcp
    protocol: TCP
    targetPort: 9002
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: logtail-1
---
apiVersion: v1
kind: Service
metadata:
  name: logtail
  labels:
    name: logtail
  namespace: akkeris-system
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 9000
  clusterIP: None
  selector:
    name: logtail
