deployments/kubernetes/logtrain-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: logtrain
    app: logtrain
  name: logtrain
  namespace: akkeris-system
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  - name: envoy
    port: 9001
    protocol: TCP
    targetPort: 9001
  - name: syslogtcp
    port: 9002
    protocol: TCP
    targetPort: 9002
  - name: syslogudp
    port: 9003
    protocol: UDP
    targetPort: 9003
  selector:
    name: logtrain
  sessionAffinity: None
  type: NodePort
