deployments/kubernetes/logtrain-istio-akkeris-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: logtail-1-akkeris-system
  namespace: sites-system
spec:
  gateways:
  - apps-public
  hosts:
  - logtail-1.example.com
  http:
  - headers:
      request: {}
      response:
        set:
          Strict-Transport-Security: max-age=31536000; includeSubDomains
    match:
    - ignoreUriCase: true
      uri:
        prefix: /tails/
    route:
    - destination:
        host: logtail-1.akkeris-system.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: logtail-0-akkeris-system
  namespace: sites-system
spec:
  gateways:
  - apps-public
  hosts:
  - logtail-0.example.com
  http:
  - headers:
      request: {}
      response:
        set:
          Strict-Transport-Security: max-age=31536000; includeSubDomains
    match:
    - ignoreUriCase: true
      uri:
        prefix: /tails/
    route:
    - destination:
        host: logtail-0.akkeris-system.svc.cluster.local
        port:
          number: 80
